# quantum-fea

./: CLI_USAGE.md  PARAVIEW_GUIDE.md  QPE_IMPLEMENTATION.md  QPE_SUMMARY.txt  QPE_SUMMARY_FINAL.txt  QUANTUM_SOLVER_EXPLANATION.md  README.md  check_paper_alignment.py  classical_solution.vtk  classical_solution_detailed.vtk  debug_quantum.py  demo_proper_qpe_hhl.py  pyproject.toml  quantum_solution.vtk  quantum_solution_detailed.vtk  report.tex  requirements.txt  test_proper_qpe.py  test_qpe_detailed.py  verify_quantum.py
output/: beam_cantilever.vtp  poisson2d_u.vti
src/quantum_fem/: __init__.py  beam.py  block_encoding.py  check_eigenvectors.py  compare_circuits.py  debug_qpe.py  debug_qpe_inline.py  demo_quantum_fem_complete.py  example_2d_bpx.py  example_beam_cantilever.py  example_cantilever.py  example_phase_estimation.py  example_quantum_4x4.py  fem.py  fem2d.py  hhl.py  io_vtk.py  phase_estimation.py  preconditioner.py  quantum_linear_functional.py  test_minimal_qpe.py  test_qft_reverse.py  test_qpe_simple.py  test_qpe_states.py  test_state_prep.py
src/quantum_fem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_beam_deflection.py  test_beam_realistic.py  test_block_encoding_4x4.py  test_bpx_condition.py  test_bpx_matvec.py  test_cantilever.py  test_functional_measurement.py
