[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-fem"
version = "0.0.1"
description = "Pedagogical quantum FEM prototype using Cirq"
authors = [ {name = "Your Name"} ]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "cirq==1.3.0",
    "numpy>=1.24,<3",
    "scipy>=1.10,<2"
]

[tool.setuptools.packages.find]
where = ["src"]
